--- a/public/style.css
+++ b/public/style.css
@@ -1,23 +1,94 @@
+/* Import Outfit font from Google Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap');
+
 body {
-    font-family: Arial, sans-serif;
+    /* font-family: Arial, sans-serif; */
+    font-family: 'Outfit', sans-serif;
+    background-color: #0b0868;
+    color: #f8f8f8;
+    margin: 0; /* Remove default margin */
+    padding: 0; /* Remove default padding */
+    text-align: center; /* Center text horizontally */
 }
 
 h1 {
-    color: #333;
+    color: #e8e2e2;
+    font-size: 50px;
+    text-shadow: 4px 4px 4px rgba(203, 195, 195, 0.3);
+    text-align: center; /* Center text horizontally */
+    padding: 5px 5px;
+    /* font-family: 'Outfit', sans-serif; */
+    margin: 20px 0 10px; /* Adjust top and bottom margin */
 }
 
-/* Reduce margin and padding for <h2> */
+section {
+    /* margin: 20px;
+    padding: 20px;
+    border-radius: 10px; */
+    background-color: #162559;
+    box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.3);
+
+}
+
+
 h2 {
-    margin-bottom: 0.3em; /* Adjust as needed */
+    margin-bottom: 0.3em;
+    color: rgb(248, 248, 130);
+    text-shadow: 5px 4px 4px rgba(0, 0, 0, 0.3);
 }
 
-/* Remove or reduce top margin for <p> */
+
 p {
-    margin-top: 0.2em; /* Adjust as needed */
+    margin-top: 0.2em;
+    font-size: 20px;
 }
 
 button {
+    background-color: #4e7197;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
     margin: 5px;
-    padding: 10px 20px;
+    padding: 10px 25px;
     font-size: 16px;
+}
+
+button:hover {
+    background-color: #0056b3;
+}
+
+a {
+    color: #ada8a8;
+}
+
+a:hover {
+    background-color: #0056b3;
+}
+
+img {
+    max-width: 100%;
+    height: auto;
+    border-radius: 10px;
+    box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.3);
+    transition: transform 0.3s, opacity 0.3s;
+}
+
+img:hover {
+    transform: scale(1.05);
+}
+
+/* Specific styles for chat.html */
+.chat {
+    background-color: #313239;
+    text-align: left; /* Align text to the left */
+    padding: 20px; /* Add some padding */
+}
+
+.chat section {
+    margin: 50px;
+    padding: 0% 1%;
+    background-color: #25262a;
+    border-radius: 10px;
+    box-shadow: 2px 2px 15px rgba(232, 222, 222, 0.3);
 }
