--- a/public/style.css
+++ b/public/style.css
@@ -33,21 +33,25 @@ h1 {
 }
 
 section {
-    /* margin: 20px;
-    padding: 20px;
-    border-radius: 10px; */
     background-color: #162559;
-    box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.3);
-
+    border-radius: 10px;
+    box-shadow: 2px 2px 15px rgba(232, 222, 222, 0.3);
+    transition: transform 0.3s, opacity 0.3s;
 }
 
+.about-me, .funny {
+    font-size: 60px;
+}
+
+.about-me:hover {
+    transform: scale(1.05);
+}
 
 h2 {
     margin-bottom: 0.3em;
     color: rgb(248, 248, 130);
     text-shadow: 5px 4px 4px rgba(0, 0, 0, 0.3);
 }
-
 
 p {
     margin-top: 0.2em;
